# MNIST-DNN-Training

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: config.h  exceptions.h  layer.cpp  logging.cpp  logging.h  main.cpp  math_functions.cpp  network.cpp  neuron.cpp  trainer.cpp
src/trainer/: trainer.cpp  training_data.cpp
src/utils/: README.md  datetime.cpp  endian.cpp  file.cpp
training_data/: convert_to_csv.py
